--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Onest&display=swap');
 body{
-    background-color:#04364A;
+    background-color:#363636;
 }
 
 *{
@@ -23,7 +23,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 30px 5%;
-    background-color: #04364A;
+    background-color: #363636;
 }
 .weekends{
   background-color:rgb(85, 124, 111);
@@ -99,7 +99,7 @@ ul{
   padding:2em;
   width: 100%;
   display:flex;
-  background-color: #bcb8b1;
+  background-color: #363636;
 }
 .section_experience{
   padding:2em;
@@ -397,7 +397,7 @@ footer{
     align-items: center;
     padding: 30px 5%;
     font-family: 'Onest', sans-serif;
-    background-color: #04364A;
+    background-color: #363636;
     color: antiquewhite;
     height: max-content;
   }
