--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header{
     margin: 5px;   
 }
 .text-right{
-  color:rgb(89, 104, 105);
+  color:white;
   width: 85%;
   margin-left: auto;
   margin-right: auto;
@@ -105,7 +105,7 @@ ul{
   padding:2em;
   width: 100%;
   display:flex;
-  background-color:rgb(89, 104, 105);
+  background-color:#505050;
 }
 .img_icons{
   width: 45px;
