--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-weight: 500;;
+    font-weight: 500;
     padding: 10px;
     background-color: #0e805e;
   }
@@ -214,7 +214,7 @@ ul{
     cursor: pointer;
   }
   .year-change:hover {
-    background-color: var(--light-btn);
+    background-color: white;
     transition:all .2s ease-in-out ;
     transform: scale(1.12);
   }
