--- a/stylefix.css
+++ b/stylefix.css
@@ -199,7 +199,7 @@ ul{
     background-color: #40b995;
   }
   .month-picker:hover {
-    color: var(--color-txt);
+    color: #302f2f;
   }
   .year-picker {
     display: flex;
@@ -220,7 +220,7 @@ ul{
     transform: scale(1.12);
   }
   .year-change:hover pre {
-    color: var(#363636);
+    color: #363636;
   }
   .calendar-footer {
     padding: 10px;
@@ -258,7 +258,7 @@ ul{
     left: 0;
     top: -50px;
     background-color: #ebebeb;
-    color: var(--light-text);
+    color: #464646;
     display: grid;
     grid-template-columns: repeat(3, auto);
     gap: 5px;
@@ -276,8 +276,8 @@ ul{
     cursor: pointer;
   }
   .month-list > div > div:hover {
-    background-color:var(--light-btn);
-    color: var(--dark-text);
+    background-color:#505050;
+    color: #464646;
     transform: scale(0.9);
     transition: all 0.2s ease-in-out;
   }
